# starframe

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  compile-shaders.sh  flake.nix  justfile  plans.md  shell.nix
blender/: export.py
ecs_codegen/src/: lib.rs
engine/: Cargo.toml
engine/core/: Cargo.toml
engine/core/src/: game.rs  inputstate.rs  lib.rs  transform.rs
engine/core/src/ecs/: componentcontainer.rs  event.rs  mod.rs  recipe.rs  space.rs  storage.rs  system.rs
engine/core/src/util/: debug.rs  inputstate.rs  mod.rs  transform.rs
engine/ecs/: Cargo.toml
engine/ecs-codegen/: Cargo.toml
engine/ecs-codegen/src/: lib.rs
engine/ecs/src/: componentcontainer.rs  event.rs  lib.rs  recipe.rs  space.pest  space.rs  storage.rs  system.rs
engine/ecs_codegen/: Cargo.toml
engine/ecs_codegen/src/: lib.rs
engine/physics/: Cargo.toml
engine/physics/src/: collider.rs  lib.rs  rigidbody.rs  systems.rs
engine/physics/src/collision/: debug.rs  mod.rs  queries.rs  solver.rs
engine/src/: lib.rs
engine/src/ecs/: event.rs  mod.rs  recipe.rs  space.rs  system.rs
engine/src/physics2d/collision/: debug.rs  mod.rs  queries.rs  solver.rs
engine/src/util/: gameloop.rs  inputcache.rs  inputstate.rs  mod.rs  transform.rs
engine/src/visuals/: shape.rs
engine/src/visuals_glium/: collider_vis.rs  debug.rs  mod.rs  shape.rs
engine/src/visuals_glium/debug/: collision.rs  mod.rs
engine/src/visuals_glium/shaders/: mod.rs  ortho_2d.vert
engine/visuals/: Cargo.toml
engine/visuals/src/: lib.rs  shape.rs
examples/fluidsim/: Cargo.toml
examples/fluidsim/src/: fluidbox.rs  gameloop.rs  main.rs
examples/sandbox/: main.rs  mousegrab.rs  player.rs  recipes.rs
examples/sandbox/assets/: library.blend  library.glb  test_tree.glb
examples/sandbox/assets/scenes/: blendertest.blend  blendertest.glb
examples/sandbox/scenes/: compound_colliders.ron  forest.ron  minimal.ron  oscillators.ron  ropes.ron  test.ron  window.ron
examples/template/: Cargo.toml  main.rs  states.rs
examples/template/src/: gameloop.rs  main.rs  states.rs
examples/testgame/: Cargo.toml  controls.rs  main.rs  mousegrab.rs  player.rs  recipes.rs  states.rs  test_events.rs  test_space.mes
examples/testgame/scenes/: bouncies.ron  minimal.ron  oscillators.ron  ropes.ron  test.ron
examples/testgame/src/: controls.rs  gameloop.rs  main.rs  states.rs  test_events.rs  test_space.mes  test_system.rs  testgame.rs
examples/testgame2/: main.rs  recipes.rs  states.rs
examples/testgame2/scenes/: test.ron
nix/: rust.nix  sources.json
scripts/: trig_consts.m
src/: animation.rs  event.rs  game.rs  graph.rs  graph_new.rs  graphics.rs  input.rs  lib.rs  math.rs  physics.rs
src/animation/: animator.rs  gltf_animation.rs
src/core/: container.rs  event.rs  game.rs  gameloop.rs  graph.rs  inputcache.rs  math.rs  mod.rs  recipe.rs  space.rs  storage.rs  transform.rs
src/ecs/: componentcontainer.rs  event.rs  mod.rs  new_architecture_sketch.rs  recipe.rs  recipes.rs  space.rs  storage.rs  system.rs
src/graph/: component_defs.rs  layer_bundle.rs
src/graph_new/: component_defs.rs  layer_bundle.rs
src/graphics/: animation.rs  camera.rs  context.rs  debug.rs  depth_buffer.rs  gi.rs  light.rs  line_renderer.rs  manager.rs  material.rs  mesh.rs  mod.rs  outlines.rs  renderer.rs  shape.rs  texture.rs  util.rs
src/graphics/animation/: animator.rs  gltf_animation.rs  interpolation.rs
src/graphics/camera/: mouse_drag.rs
src/graphics/gi/: environment_map.rs
src/graphics/manager/: gltf_import.rs
src/graphics/mesh/: batched.rs  gltf_import.rs  mesh_renderer.rs  simple.rs  skin.rs  skinned.rs
src/graphics/renderer/: deferred.rs  gbuffer.rs  shading.rs
src/graphics/shaders/: deferred_shade.wgsl  depth_and_emissive.wgsl  depth_prepass.wgsl  directional_light.wgsl  jump_flood.wgsl  light_culling.wgsl  light_mip.wgsl  line_cap.wgsl  line_segment.wgsl  mesh.wgsl  mesh_batched.wgsl  mesh_geometry.wgsl  mesh_skinned.wgsl  mip_chain.wgsl  point_light.wgsl  radiance_cascades.wgsl  shape.frag  shape.frag.spv  shape.vert  shape.vert.spv  shape.wgsl  skin.wgsl
src/graphics/shaders/outlines/: draw_outline.wgsl  init.wgsl  jump_flood.wgsl  mesh_init.wgsl
src/physics/: bitmatrix.rs  body.rs  collision.rs  component_graph.rs  constraint.rs  constraint_graph.rs  constraint_set.rs  entity_set.rs  forcefield.rs  hecs_sync.rs  mod.rs  rigidbody.rs  rope.rs  solver.rs
src/physics/collision/: broadphase.rs  bvh.rs  collider.rs  compound_collider.rs  hgrid.rs  mod.rs  narrowphase.rs  query.rs  shape_shape.rs  spatialindex.rs
src/physics/collision/collider/: constants.rs  shape.rs
src/physics/constraint/: cache.rs  func.rs  solver.rs
src/physics2d/: collider.rs  constraint.rs  forcefield.rs  integrator.rs  mod.rs  pipeline.rs  rigidbody.rs  systems.rs
src/physics2d/collision/: broadphase.rs  collider.rs  mod.rs  narrowphase.rs  pipeline.rs  solver.rs
src/util/: gameloop.rs  inputcache.rs  mod.rs  statemachine.rs  transform.rs
src/visuals/: drawable.rs  mod.rs  shape.rs
src/visuals_glium/: camera.rs  context.rs  debug.rs  mod.rs  shape.rs
src/visuals_glium/shaders/: ortho_2d.frag  ortho_2d.vert
