[package]
name = "starframe"
version = "0.1.0"
authors = ["Mikael Myyrä <mikael.myyrae@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
winit = "0.25.0"
wgpu = "0.10.1"
zerocopy = "0.6.0"
futures = "0.3.17"
ultraviolet = { version = "0.8.1", features = ["f64"] }
itertools = "0.10.1"
slotmap = "1.0.6"
list-any = "0.2.0"
parking_lot = "0.11.2"
tracy-client = { version = "0.12.4", default-features = false }
serde = { version = "1.0.130", features = ["derive"], optional = true }
rayon = { version = "1.5.1", optional = true }

[features]
default = ["serde-types", "parallel"]
parallel = ["rayon"]
serde-types = ["serde", "ultraviolet/serde"]
tracy = ["tracy-client/enable"]

[dev-dependencies]
rand = "0.8.4"
ron = "0.6.5"

[profile.dev]
opt-level = 2
