[package]
name = "starframe"
version = "0.1.0"
authors = ["Mikael Myyrä <mikael.myyrae@gmail.com>"]
edition = "2021"

[dependencies]
winit = "0.26.0"
wgpu = "0.12.0"
zerocopy = "0.6.1"
futures = "0.3.19"
ultraviolet = { version = "0.8.1", features = ["f64"] }
itertools = "0.10.3"
slotmap = "1.0.6"
parking_lot = "0.11.2"
tracy-client = { version = "0.12.6", default-features = false }
serde = { version = "1.0.132", features = ["derive"], optional = true }
rayon = { version = "1.5.1", optional = true }

[features]
default = ["serde-types", "parallel"]
parallel = ["rayon"]
serde-types = ["serde", "ultraviolet/serde", "winit/serde"]
tracy = ["tracy-client/enable"]

[dev-dependencies]
rand = "0.8.4"
ron = "0.7.0"
# egui and its wgpu integration deps
egui = "0.16.1"
egui_wgpu_backend = "0.16.0"
egui_winit_platform = "0.13.0"

[[example]]
name = "sandbox"
required-features = ["serde-types"]

[profile.dev]
opt-level = 2
