[package]
name = "starframe"
version = "0.1.0"
authors = ["Mikael Myyrä <mikael.myyrae@gmail.com>"]
edition = "2021"

[dependencies]
winit = "0.29"
instant = { version = "0.1", features = ["wasm-bindgen"] }
wgpu = "0.20.1"
hecs = "0.10.3"
thunderdome = "0.6.1"
zerocopy = "0.6.1"
futures = "0.3.19"
ultraviolet = { version = "0.9.0", features = ["f64"] }
itertools = "0.10.3"
parking_lot = "0.11.2"
serde = { version = "1.0.132", features = ["derive"], optional = true }
rayon = { version = "1.5.1", optional = true }
gltf = { version = "1.4.0", optional = true }
thiserror = "1.0.58"
tracy-client = { version = "=0.17.0", default-features = false }
wgpu-profiler = { version = "0.17.0", features = ["tracy"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.80"
web-sys = "0.3.57"
js-sys = "0.3.57"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.6"
log = "0.4"
console_log = "0.1.2"

[features]
# TODO: figure out how to make "parallel" default when not on wasm
# (cargo-run-wasm doesn't support --no-default-features at the moment)
default = ["serde-types", "gltf"]
parallel = ["rayon"]
serde-types = ["serde", "ultraviolet/serde", "winit/serde"]
tracy = ["tracy-client/enable", "tracy-client/ondemand"]

[dev-dependencies]
rand = "0.8.4"
getrandom = { version = "0.2.7", features = ["js"] }
ron = "0.7.0"
# egui and its wgpu integration deps
egui = "0.28.1"
egui-wgpu = "0.28.1"
egui-winit = "0.28.1"

[[example]]
name = "sandbox"
required-features = ["serde-types"]

[profile.dev]
opt-level = 2

[workspace]
members = ["run-wasm"]
