[package]
name = "template"
version = "0.1.0"
authors = ["Mikael Myyrä <mikael.myyrae@gmail.com>"]
edition = "2018"

[dependencies]
moleengine = { path = "../../engine/core" }
moleengine_visuals = { path = "../../engine/visuals" }
moleengine_physics = { path = "../../engine/physics" }
piston = "0.42.0"
piston2d-graphics = "0.30"
pistoncore-glutin_window = "0.54.0"
piston2d-opengl_graphics = "0.59"
nalgebra = "0.17.2"
